tests/machine/x/fs/record_assign.fs
// Generated by Mochi compiler v0.10.27 on 2025-07-17T07:48:22Z
open System

type Anon1 = {
    n: int
}
type Counter = {
    mutable n: int
}
let inc (c) =
    c.n <- c.n + 1
let mutable c: Anon1 = { n = 0 }
printfn "%A" (inc c)
printfn "%d" (c.n)
